Blog text display with formatting

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,8 @@
 	<meta property="og:image" content="http://sopnopriyo.com/img/shahin.png" />
 	<meta property="og:image:secure_url" content="http://sopnopriyo.com/img/shahin.png"/> 
 	<link rel="sitemap" type="application/xml" href="https://sopnopriyo.com/sitemap.xml">
-    <title>Sopnopriyo - Full Stack Developer</title>
+	<meta name="google-site-verification" content="ze9majkZni0ozLI8CSwdbSGsb58hr_XVnrdLIXpZOUo" />
+	<title>Sopnopriyo - Full Stack Developer</title>
 </head>
 
 <body>
